# virtual_sensor_system

cpp/: CMakeLists.txt  main.cpp
cpp/Controller/: Controller.cpp  Controller.h
cpp/Sensors/: LightSensor.cpp  LightSensor.h  MotionSensor.cpp  MotionSensor.h  Sensor.h  SensorEvent.h  TemperatureSensor.cpp  TemperatureSensor.h
cpp/TriggerManager/: TriggerManager.cpp  TriggerManager.h
cpp/Utils/: TimeUtils.h
cpp/output/: sensor_logs.csv
docs/: DESIGN.md  README.md
python/: visualize_data.py
